# OOP_LAB05

./: .gitignore  README.md
laba5/: CMakeLists.txt
laba5/include/: DoublyLinkedList.h  FixedMapMemoryResource.h
laba5/src/: main.cpp
laba5/tests/: tests.cpp
